--- a/app/templates/dashboard/artikeldepan_details.html
+++ b/app/templates/dashboard/artikeldepan_details.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     {% include "base/header.html" %}
-    <title>Artikel - PSIDAMAI</title>
+    <title>Artikel Details - PSIDAMAI</title>
   </head>
   <body>
     <body class="service-details-page">
@@ -20,8 +20,6 @@
           <nav id="navmenu" class="navmenu">
             <i class="mobile-nav-toggle d-xl-none bi bi"></i>
           </nav>
-  
-          <a class="btn-getstarted" href="/artikeldepan">Kembali</a>
         </div>
       </header>
 
