--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -196,7 +196,7 @@
                   >
                 </p>
                 <p>
-                  <a href="/forget-password" style="color: #fff"
+                  <a href="/ubah-password" style="color: #fff"
                     >Ubah Password?</a
                   >
                 </p>
