--- a/app/templates/base/navbar_masuk.html
+++ b/app/templates/base/navbar_masuk.html
@@ -44,7 +44,7 @@
         >
           <li><a class="dropdown-item" href="/profile">Profil Saya</a></li>
           <li>
-            <a class="dropdown-item" href="/forget-password">Ubah Password</a>
+            <a class="dropdown-item" href="/ubah-password">Ubah Password</a>
           </li>
           <li><hr class="dropdown-divider" /></li>
           <li>
