--- a/app/templates/dashboard/home.html
+++ b/app/templates/dashboard/home.html
@@ -751,7 +751,7 @@
 
     Swal.fire({
       title: "Hasil Skrining",
-      text: resultText,
+      html: `<p style="font-size: 17px;">${resultText}</p>`,
       icon: "info",
       confirmButtonText: "OKE",
       confirmButtonColor: '#39ce7d'
