--- a/app/templates/auth/ubah_password.html
+++ b/app/templates/auth/ubah_password.html
@@ -110,7 +110,7 @@
 
         $.ajax({
           type: "POST",
-          url: "/forget-password-check",
+          url: "/ubah-password-check",
           data: {
             username: username,
             password: password,
