--- a/app/templates/auth/ubah_password.html
+++ b/app/templates/auth/ubah_password.html
@@ -44,6 +44,7 @@
       function ubahPassword() {
         let username = $("#username").val();
         let password = $("#password").val();
+        let passwordNew = $("#passwordNew").val();
         let konfirmasiPassword = $("#konfirmasiPassword").val();
 
         if (username === "") {
@@ -74,8 +75,22 @@
           .removeClass("is-safe")
           .addClass("is-danger");
 
-        if (!is_password(password)) {
-          $("#helpPassword")
+        if (passwordNew === "") {
+          $("#helpPasswordNew")
+            .text("Silahkan Masukan Password Lama!")
+            .removeClass("is-safe")
+            .addClass("is-danger");
+          $("#passwordNew").focus();
+          return;
+        }
+
+        $("#helpPasswordNew")
+          .text("")
+          .removeClass("is-safe")
+          .addClass("is-danger");
+
+        if (!is_password(passwordNew)) {
+          $("#helpPasswordNew")
             .text(
               "Penulisan password harus menggunakan kombinasi angka, minimal 8-20 karakter!"
             )
@@ -99,7 +114,7 @@
           .removeClass("is-safe")
           .addClass("is-danger");
 
-        if (konfirmasiPassword !== password) {
+        if (konfirmasiPassword !== passwordNew) {
           $("#helpKonfirmasiPassword")
             .text("Password tidak sesuai!")
             .removeClass("is-safe")
@@ -114,6 +129,7 @@
           data: {
             username: username,
             password: password,
+            newPassword: passwordNew,
           },
           success: function (response) {
             if (response["result"] === "success") {
@@ -130,10 +146,11 @@
               });
             } else {
               $("#helpusername")
-                .text("Username tidak sesuai!")
+                .text("Silahkan Masukan Username!")
                 .removeClass("is-safe")
                 .addClass("is-danger");
               $("#username").focus();
+              return;
             }
           },
         });
@@ -168,10 +185,19 @@
                   <input
                     type="password"
                     class="form-control"
-                    placeholder="Password Baru"
+                    placeholder="Password Lama"
                     id="password"
                   />
                   <p id="helpPassword" class="help is-hidden"></p>
+                </div>
+                <div class="form-group">
+                  <input
+                    type="password"
+                    class="form-control"
+                    placeholder="Password Baru"
+                    id="passwordNew"
+                  />
+                  <p id="helpPasswordNew" class="help is-hidden"></p>
                 </div>
                 <div class="form-group">
                   <input
