--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -94,7 +94,7 @@
             $("#foto").attr("src", foto);
             if (testimonial === "") {
                 alert("Silahkan isi testimoni!")
-                
+                return
             }
 
             if (star === "Beri Rating") {
