--- a/app/templates/dashboard/program.html
+++ b/app/templates/dashboard/program.html
@@ -51,29 +51,25 @@
 
       <!-- Programs Posts Section -->
       <section id="program-posts" class="program-posts section">
-        <div class="container ">
+        <div class="container">
           <div class="row gy-4">
             <div class="col-lg-4" data-aos="fade-up">
-              <a href="/add-materi/Perkenalan Mindfulness Untuk Mahasiswa" class="post-item-link" style="text-decoration: none;">
-                <article class="post-item">
-                  <div class="post-img">
-                    <img
-                      src="{{url_for('static', filename='assets/img/program/program-1.jpg')}}"
-                      alt="Gangguan Kecemasan"
-                      class="img-fluid"
-                    />
-                  </div>
-                  <h2 class="title-center">
-                    <a href="/program_content" id="mindfulness-link">Perkenalan Mindfulness Untuk Mahasiswa</a>
-                  </h2>
-                </article>
-              </a>
+              <article class="post-item">
+                <div class="post-img">
+                  <img
+                    src="{{url_for('static', filename='assets/img/program/program-1.jpg')}}"
+                    alt="Gangguan Kecemasan"
+                    class="img-fluid"
+                  />
+                </div>
+                <h2 class="title-center">
+                  <a href="/program_content" id="mindfulness-link">Perkenalan Mindfulness Untuk Mahasiswa</a>
+                </h2>
+              </article>
             </div>
-            <!-- End post list item -->
-
-            
-
-          
+          </div>
+        </div>
+      </section>
       <!-- End Programs Posts Section -->
     </main>
 
