--- a/app/templates/dashboard/artikeldepan.html
+++ b/app/templates/dashboard/artikeldepan.html
@@ -34,7 +34,7 @@
                       class="img-fluid"
                     />
                   </div>
-                  <p class="post-category">{{ article.category }}</p>
+                  <p class="post-category">{{ article.kategori }}</p>
                   <h2 class="title">{{ article.title }}</h2>
                   <div class="d-flex align-items-center">
                     <img
